# ElunaTrinityWotlk

./: .gitignore  .travis.yml  README.md  VIP.txt
.circleci/: config.yml
dep/lualib/: CMakeLists.txt
dep/lualib/lua/: CMakeLists.txt  lua.hpp
dep/lualib/luajit/: CMakeLists.txt
src/server/game/: CMakeLists.txt
src/server/game/AI/CoreAI/: GameObjectAI.h  UnitAI.cpp
src/server/game/AI/NpcBots/: bot_GridNotifiers.h  bot_ai.cpp  bot_ai.h  bot_archmage_ai.cpp  bot_bm_ai.cpp  bot_dark_ranger_ai.cpp  bot_death_knight_ai.cpp  bot_dreadlord_ai.cpp  bot_druid_ai.cpp  bot_hunter_ai.cpp  bot_mage_ai.cpp  bot_necromancer_ai.cpp  bot_paladin_ai.cpp  bot_priest_ai.cpp  bot_rogue_ai.cpp  bot_sea_witch_ai.cpp  bot_shaman_ai.cpp  bot_spellbreaker_ai.cpp  bot_sphynx_ai.cpp  bot_warlock_ai.cpp  bot_warrior_ai.cpp  botcommands.cpp  botcommon.h  botdatamgr.cpp  botdump.cpp  botgiver.cpp  botmgr.cpp  botmgr.h  botspell.h  bpet_ai.cpp  bpet_ai.h  bpet_archmage.cpp  bpet_dark_ranger.cpp  bpet_death_knight.cpp  bpet_dreadlord.cpp  bpet_druid.cpp  bpet_mage.cpp  bpet_necromancer.cpp  bpet_priest.cpp  bpet_sea_witch.cpp  (+2 more)
src/server/game/AI/NpcBots/lib/: bottraits.h
src/server/game/AI/ScriptedAI/: ScriptedCreature.h  ScriptedGossip.h
src/server/game/AI/SmartScripts/: SmartScript.cpp
src/server/game/Accounts/: RBAC.h
src/server/game/Achievements/: AchievementMgr.cpp
src/server/game/Anticheat/: AnticheatMgr.cpp
src/server/game/Battlegrounds/: ArenaTeam.cpp  ArenaTeam.h  Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundQueue.cpp  BattlegroundQueue.h  CFBGQueue.cpp  CFBGQueue.h
src/server/game/Battlegrounds/Zones/: BattlegroundAB.cpp  BattlegroundAV.cpp  BattlegroundWS.cpp
src/server/game/Cfbg/: Cfbg.cpp  Cfbg.h
src/server/game/Chat/: Chat.cpp
src/server/game/Chat/ChatCommands/: ChatCommand.cpp
src/server/game/Combat/: CombatManager.cpp  ThreatManager.cpp
src/server/game/Conditions/: ConditionMgr.cpp
src/server/game/DataStores/: DBCEnums.h  DBCStores.cpp  DBCStores.h
src/server/game/DungeonFinding/: LFGMgr.cpp  LFGQueue.cpp  LFGScripts.cpp
src/server/game/Entities/Creature/: Creature.cpp  Creature.h  CreatureData.h  TemporarySummon.cpp  enuminfo_CreatureData.cpp
src/server/game/Entities/GameObject/: GameObject.cpp  GameObject.h
src/server/game/Entities/Item/: Item.cpp  Item.h  ItemTemplate.h  Reforging.cpp  Transmogrification.cpp  Transmogrification.h
src/server/game/Entities/Object/: Object.cpp  Object.h
src/server/game/Entities/Object/Updates/: UpdateFields.h
src/server/game/Entities/Pet/: Pet.cpp
src/server/game/Entities/Player/: CFBGData.cpp  CFBGData.h  Player.cpp  Player.h
src/server/game/Entities/Totem/: Totem.cpp
src/server/game/Entities/Unit/: StatSystem.cpp  Unit.cpp  Unit.h
src/server/game/Entities/Vehicle/: Vehicle.cpp
src/server/game/Events/: GameEventMgr.cpp
src/server/game/Globals/: ObjectMgr.cpp  ObjectMgr.h
src/server/game/Grids/Notifiers/: GridNotifiers.h
src/server/game/Groups/: Group.cpp  Group.h  GroupMgr.cpp
src/server/game/Guilds/: GuildMgr.cpp
src/server/game/Handlers/: BattleGroundHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  GroupHandler.cpp  ItemHandler.cpp  LootHandler.cpp  MailHandler.cpp  MiscHandler.cpp  NPCHandler.cpp  QueryHandler.cpp  QuestHandler.cpp  SpellHandler.cpp  TaxiHandler.cpp  TradeHandler.cpp
src/server/game/Instances/: InstanceScript.cpp  InstanceScript.h
src/server/game/Maps/: Map.cpp  Map.h  MapInstanced.cpp  MapManager.cpp
src/server/game/Miscellaneous/: Language.h  SharedDefines.h
src/server/game/Movement/: MotionMaster.cpp
src/server/game/Quests/: QuestDef.h
src/server/game/Scripting/: ScriptMgr.cpp  ScriptMgr.h
src/server/game/Server/: WorldSession.cpp  WorldSocket.cpp
src/server/game/Server/Packets/: AllPackets.h
src/server/game/Spells/: Spell.cpp  Spell.h  SpellEffects.cpp  SpellInfo.cpp  SpellInfo.h  SpellMgr.cpp  SpellMgr.h
src/server/game/Spells/Auras/: SpellAuraEffects.cpp  SpellAuraEffects.h  SpellAuras.cpp
src/server/game/World/: World.cpp  World.h
(+100 files in other folders)
